--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URL=mongodb://localhost:27017/Union
+MONGODB_URL=mongodb+srv://sharmapratham1808:Sharma1592@cluster0.rfxn4.mongodb.net/aith_ecell?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET_KEY=SAABDOGALEHAI
