--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URL=mongodb+srv://sharmapratham1808:Sharma1592@cluster0.rfxn4.mongodb.net/aith_ecell?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET_KEY=SAABDOGALEHAI
+PORT=8000
