--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,6 @@
 {
     "version": 2,
-    "builds": [
-     {
-      "src": "server.js",
-      "use": "@vercel/node",
-      "config": { "includeFiles": ["dist/**"] }
-     }
-    ],
-    "routes": [
-     {
-      "src": "/(.*)",
-      "dest": "server.js"
-     }
-    ]
-   }
+    "name": "server",
+    "builds": [{ "src": "server.js", "use": "@vercel/node" }],
+    "routes": [{ "src": "/(.*)", "dest": "/server.js" }]
+  }
